fix: don’t hide aria-hidden by default

--- a/frontend/styles/_accessibility.css
+++ b/frontend/styles/_accessibility.css
@@ -37,7 +37,3 @@
 main:focus {
   outline: none;
 }
-
-[aria-hidden="true"] {
-  display: none !important;
-}
